@@ -33,17 +33,25 @@ Trees are ubiquitous in mathematics, computer science, data sciences, finance, a
 * in computer science and programming (e.g. binary search trees, XML)
 * e.g. for family trees
 
-Tree-like structures are already used in R. For example, environments can be seen as nodes in a tree. And CRAN provides numerous packages that deal with tree-like structures, especially in the area of decision theory. Yet, there is no high-level hierarchical data structure that could be used as conveniently and generically as, say, data.frame. 
+## Trees in R
 
-As a result, people often try to resolve hierarchical problems in a tabular fashion, for instance with data.frames (or - perish the thought! - in Excel sheets). But hierarchies don't marry with tables and various workarounds are usually required. 
+Tree-like structures are already used in R. For example, environments can be seen as nodes in a tree. And CRAN provides numerous packages that deal with tree-like structures, especially in the area of decision theory. Yet, there is no general purpose hierarchical data structure that could be used as conveniently and generically as, say, data.frame. 
 
-This package offers an alternative. The tree package allows you to create hierarchies with the `Node` object. `Node` provides basic traversal, search, and sort operations. You can decorate `Node`s with attributes and methods, extending the package to your needs. 
+As a result, people often try to resolve hierarchical problems in a tabular fashion, for instance with data.frames (or - perish the thought! - in Excel sheets). But often, hierarchies don't marry with tables and various workarounds are usually required. 
 
-The package also provides convenient methods for neatly printing trees, and converting trees to `data.frame`s for integration with other packages.
+## What does data.tree offer
+
+This package offers an alternative. The tree package allows you to create hierarchies, callde `data.tree` structures. The building block of theses structures are `Node` objects. `Node` provides basic traversal, search, and sort operations, and an infrastructure for recursive tree programming. You can decorate `Node`s with your own attributes and methods, so as to extend the package to your needs. 
+
+The package also provides convenient methods for neatly printing trees, and converting trees to `data.frame`s, `lists`, and other tree structures such as `dendrogram`, `phylo` objects from the ape package, `igraph` and other packages.
 
 The example in this vignette revolves around [decision trees](http://en.wikipedia.org/wiki/Decision_tree).
 
+# Chapter 2
+
 ## Tree creation
+
+### Create a tree programmatically
 
 Let's start by creating a tree of `Node`s. In our example, we are looking at a company, Acme Inc., and the tree reflects its organisational structure. The root (level 0) is the company. On level 1, the nodes represent departments, and the leaves of the tree represent projects that the company is considering for next year:
 
@@ -68,12 +76,76 @@ Note that `Node` is an `R6` reference class. Essentially, this has two implicati
 1. You can call methods on a `Node` in OO style
 2. You can call methods on a `Node` that modify it, without having to re-assign to a new variable. This is different from the *value semantics*, which is much more widely used in R.
 
-## Calling methods in OO style
+### Create a tree from a data.frame
 
-For example, we can check if a `Node` is the root:
-```{r}
-acme$isRoot
+Creating a tree programmatically is useful especially in the context of algorithms. However, most times you will create a try by conversion. This could be by conversion from a list-of-list, by conversion from another R tree-structure (e.g. an ape phylo), or by conversion from a `data.frame`. For more details on all the options type:
+
+```{r eval=FALSE}
+?as.Node
 ```
+
+and refer to the See Also section.
+
+One of the most common conversions is the one from a data.frame in table format. The following code illustrats this:
+
+```{r}
+library(treemap)
+data(GNI2010)
+#this data.frame is in table format, meaning that each row represents a
+#leaf in the tree:
+head(GNI2010)
+#the pathString describes the hierarchy by defining a path from the
+#root to each leaf. In this example, the hierarchy comes very naturally:
+GNI2010$pathString <- paste("world", 
+                            GNI2010$continent, 
+                            GNI2010$country, 
+                            sep = "/")
+
+#conversion to Node is then very easy:
+population <- as.Node(GNI2010)
+print(population, "continent", "country", limit = 25)
+```
+
+
+### Create a tree from a file
+
+Often, trees are created from one of many file formats. Typical import patterns could be:
+
+* csv -> data.frame in table format (`?read.csv`) -> data.tree (`?as.Node.data.frame`)
+* Newick -> ape phylo (`?ape::read.tree`) -> data.tree (`?as.Node.phylo` )
+* csv -> data.frame in taxonomy / edge format (`?read.csv`) -> data.tree (c.f. `?FromDataFrameTaxonomy`)
+* yaml -> list of lists (`?yaml::yaml.load`) -> data.tree (`?as.Node.list`, `demo('decisiontree', package='data.tree')`
+* json -> list of lists (e.g. `?jsonlite::fromJSON`) -> data.tree (`?as.Node.list`)
+
+If you have a choice, we recommend you consider yaml format, as it is concise, human-readable, and very easy to convert to a data.tree.
+
+
+## Node methods
+
+A `data.tree` structure is composed of `Node` objects, and the entry point to a `data.tree` structure is always a `Node`, typically the root `Node` of a tree.
+
+There are different types of methods:
+
+* OO-style actives (sometimes called properties) on `Node`s, such as e.g. `Node$isRoot`
+* OO-style methods on `Node`s, such as e.g. `Node$Prune(pruneFun)`
+* Classical R methods, such as e.g. `Clone(node)`. The main reason for these are not design considerations, but performance. As OO-style methods maintain their own "copy" of the function in each `Node` instance, OO-style methods are inflating memory usage of the `Node`s. For this reason, their use is kept to a minimum
+
+### Actives Examples
+
+Actives look like fields, but they are dynamically evaluated:
+
+```{r}
+
+population
+population$isRoot
+population$depth
+population$count
+population$totalCount
+population$fields
+population$totalFields
+```
+
+
 
 ## Custom attributes
 
